[gd_scene load_steps=18 format=2]

[ext_resource path="res://resource/user/user_soldier/ship_soldier_left.png" type="Texture" id=1]
[ext_resource path="res://resource/user/user_soldier/ship_soldier_right.png" type="Texture" id=2]
[ext_resource path="res://resource/user/user_soldier/ship_soldier_speed12.png" type="Texture" id=3]
[ext_resource path="res://resource/user/user_soldier/ship_soldier_back.png" type="Texture" id=4]
[ext_resource path="res://resource/user/user_soldier/ship_soldier_speed1.png" type="Texture" id=5]
[ext_resource path="res://resource/user/user_soldier/ship_soldier_speed2.png" type="Texture" id=6]
[ext_resource path="res://soldier_user.gd" type="Script" id=7]
[ext_resource path="res://explotion_sprite.tscn" type="PackedScene" id=8]
[ext_resource path="res://explotion.tscn" type="PackedScene" id=9]
[ext_resource path="res://ship_collision.tscn" type="PackedScene" id=10]
[ext_resource path="res://ship_collision_animation.tscn" type="PackedScene" id=11]
[ext_resource path="res://radar.tscn" type="PackedScene" id=16]
[ext_resource path="res://head_east.tscn" type="PackedScene" id=17]
[ext_resource path="res://direction_collision.tscn" type="PackedScene" id=18]
[ext_resource path="res://life_tag.tscn" type="PackedScene" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "desplace_left",
"speed": 15.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "desplace_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 3 ) ],
"loop": true,
"name": "speed1",
"speed": 100.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "speed3",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "step_back",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 29.0
height = 0.0

[node name="soldier_user" type="Area2D"]
collision_layer = 8
collision_mask = 4159
script = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.098546, 0.0998039 )
frames = SubResource( 1 )
animation = "speed1"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="explotion_animation" parent="." instance=ExtResource( 9 )]

[node name="explotion" parent="." instance=ExtResource( 8 )]

[node name="ship_collision_animation" parent="." instance=ExtResource( 11 )]

[node name="ship_collision" parent="." instance=ExtResource( 10 )]
frame = 0

[node name="head" parent="." instance=ExtResource( 17 )]
position = Vector2( 46, 0 )

[node name="attack_rate" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="direction_collision" parent="." instance=ExtResource( 18 )]

[node name="life_tag" parent="." instance=ExtResource( 19 )]
position = Vector2( -18, -42 )

[node name="radar" parent="." instance=ExtResource( 16 )]
rotation = -1.5708
collision_mask = 4111

[node name="shot_eye" type="RayCast2D" parent="."]
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 500 )
collision_mask = 4127
collide_with_areas = true
collide_with_bodies = false

[node name="target_detection" type="Timer" parent="."]
autostart = true

[connection signal="area_entered" from="." to="." method="_on_soldier_user_area_entered"]
[connection signal="animation_finished" from="explotion_animation" to="." method="_on_explotion_animation_animation_finished"]
[connection signal="animation_finished" from="ship_collision_animation" to="." method="_on_ship_collision_animation_animation_finished"]
[connection signal="timeout" from="attack_rate" to="." method="_on_attack_rate_timeout"]
[connection signal="restart_position" from="direction_collision" to="." method="_on_direction_collision_restart_position"]
[connection signal="area_entered" from="radar" to="." method="_on_radar_area_entered"]
[connection signal="area_exited" from="radar" to="." method="_on_radar_area_exited"]
[connection signal="timeout" from="target_detection" to="." method="_on_target_detection_timeout"]
